<resources>
    <string name="app_name">Financier</string>
    <string name="app_surface">financier-core</string>
    <string name="defacc_bank1">Bank.A</string>
    <string name="defacc_bank2">Bank.B</string>
    <string name="defacc_cash">Cash</string>
    <string name="defacc_entertainment">Entertainment</string>
    <string name="defacc_food1">Food.Personal</string>
    <string name="defacc_food2">Food.Party</string>
    <string name="defacc_interest">Interest</string>
    <string name="defacc_otherexpense">Other expense</string>
    <string name="defacc_otherincome">Other income</string>
    <string name="defacc_salary">Salary</string>
    <string name="dtitem_accmgnt">Accounts</string>
    <string name="dtitem_adddetail">Add Detail</string>
    <string name="dtitem_detlist">Details</string>
    <string name="dtitem_prefs">Preferences</string>
    <string name="label_all_details">All details (%1$s records)</string>
    <string name="label_asset">Asset</string>
    <string name="label_date">Date</string>
    <string name="label_liability">Liability</string>
    <string name="label_detlayout_type1">To - Money</string>
    <string name="label_detlayout_type2">Note - Money</string>
    <string name="label_detlist_from">&lt; %1$s</string>
    <string name="label_detlist_sum_income">Income %1$s</string>
    <string name="label_detlist_sum_expense">Expense %1$s</string>
    <string name="label_detlist_sum_asset">Asset %1$s </string>
    <string name="label_detlist_sum_liability">Liability %1$s</string>
    <string name="label_detlist_sum_other">Other %1$s</string>
    <string name="label_detlist_to">%1$s</string>
    <string name="label_expense">Expense</string>
    <string name="label_firstday_mon">Monday</string>
    <string name="label_firstday_sun">Sunday</string>
    <string name="label_from_account">From</string>
    <string name="label_income">Income</string>
    <string name="label_initial_value">Initial</string>
    <string name="label_money">Money</string>
    <string name="label_month_details">%1$s (%2$s records)</string>
    <string name="label_day_details">%1$s (%2$s records)</string>
    <string name="label_note">Note</string>
    <string name="label_other">Other</string>
    <string name="label_prefs_detlayout">Detail layout</string>
    <string name="label_prefs_detlayout_sum">Choose different type for detail list layout</string>
    <string name="label_prefs_firstday_week">First day of week</string>
    <string name="label_prefs_firstday_week_sum">Set the first day of week</string>
    <string name="label_prefs_improvider">In-memory-provider</string>
    <string name="label_prefs_improvider_sum">For trying this application, data in this mode will not be persisted</string>
    <string name="label_prefs_maxrecords">Maximum records</string>
    <string name="label_prefs_maxrecords_sum">Set number of max records in detail list, -1 means no limit</string>
    <string name="label_reports">Reports</string>
    <string name="label_to_account">To</string>
    <string name="label_week_details">%5$s %1$s to %2$s - Week %3$s/%4$s (%6$s)</string>
    <string name="label_year_details">%1$s (%2$s records)</string>
    <string name="msg_account_created">Account %1$s was created in type %2$s</string>
    <string name="msg_account_deleted">Account %1$s was deleted</string>
    <string name="msg_account_existed">%1$s is existed in type %2$s</string>
    <string name="msg_account_updated">Account %1$s was updated in type %2$s</string>
    <string name="msg_created_account">Created %1$s accounts</string>
    <string name="msg_created_detail">Created %1$s details</string>
    <string name="msg_detail_created">Detail was created</string>
    <string name="msg_detail_deleted">Detail was deleted</string>
    <string name="msg_detail_updated">Detail was updated</string>
    <string name="msg_same_from_to">From and To are the same one</string>
    <string name="title_acceditor">Account Editor</string>
    <string name="title_acceditor_create">Create Account</string>
    <string name="title_acceditor_update">Update Account</string>
    <string name="title_accmgnt">Account Manager</string>
    <string name="title_desktop">Desktop</string>
    <string name="title_deteditor_create">Create Detail</string>
    <string name="title_deteditor">Detail Editor</string>
    <string name="title_deteditor_update">Update Detail</string>
    <string name="title_detlist">Detail List</string>
    <string name="title_detmgnt">Detail Manager</string>
    <string name="title_prefs">Preferences</string>
    <string name="dt_main">Main</string>
    <string name="dt_reports">Reports</string>
    <string name="dt_tests">Tests</string>
    <string name="label_prefs_testsdekstop">Open tests desktop</string>
    <string name="label_prefs_testsdekstop_sum">open the tests desktop, for developer only</string>
    <string name="label_export_csv">Export CSV</string>
    <string name="label_import_csv">Import CSV</string>
    <string name="label_reset">Reset data</string>
    <string name="label_create_default">Create default data(account)</string>
    <string name="msg_csv_exported">Data (%1$s) was all exported to %2$s, </string>
    <string name="msg_csv_imported">Data was imported from %2$s (%1$s)</string>
    <string name="msg_rested">Date was reseted</string>
    <string name="msg_default_created">Default date was created</string>
    <string name="title_datamain">Data Maintenance</string>
    <string name="qmsg_export_csv">Do you want to export CSV and replace it?</string>
    <string name="qmsg_import_csv">Do you want to import CSV and replace data?</string>
    <string name="qmsg_reset">Do you want to reset data?</string>
    <string name="qmsg_create_default">Do you want to create default data?</string>
    <string name="dtitem_datamain">Data</string>
    <string name="msg_no_csv">No CSV Files</string>
    <string name="label_clear_folder">Clear working folder</string>
    <string name="msg_folder_cleared">Working folder %1$s was cleared</string>
    <string name="label_prefs_backupcsv">Backup CSV</string>
    <string name="label_prefs_backupcsv_sum">Backup old CSV when doing export</string>
    <string name="qmsg_clear_folder">Do you want to clear working folder %1$s? all CSV and BAK will be removed</string>
    <string name="defacc_creditcard">Credit card</string>
    <string name="label_account">Account</string>
    <string name="label_detail">Detail</string>
    <string name="label_account_only">Account only</string>
    <string name="label_detail_only">Detail only</string>
    <string name="label_share_csv">Share CSV</string>
    <string name="msg_share_csv_title">Financier %1$s</string>
    <string name="msg_share_csv_content">Financier CSV Files</string>
    <string name="qmsg_share_csv">Share which CSV files?</string>
    <string name="msg_firsttime_use_hint">Welcome to Financier, click Add Detail to start</string>
    <string name="label_balance_tincome">Income balance</string>
    <string name="label_balance_texpense">Expense balance</string>
    <string name="label_balance_tasset">Asset balance</string>
    <string name="label_balance_tliability">Liability balance</string>
    <string name="label_balance_tother">Other balance</string>
    <string name="label_balance_mode_month">Changes in %1$s (%2$s-%3$s)</string>
    <string name="label_balance_mode_year">Changes in year %1$s</string>
    <string name="label_balance_mode_month_total">Until %1$s (-%2$s)</string>
    <string name="label_balance_mode_year_total">Balance until year %1$s</string>
    <string name="label_count">(%1$s)</string>
    <string name="label_accdetlist_dateinfo">%1$s to %2$s</string>
    <string name="label_prefs_password">Password protection-1</string>
    <string name="label_prefs_password_sum">Set application password, empty means no protection</string>
    <string name="label_prefs_passwordvd">Password protection-2</string>
    <string name="label_prefs_passwordvd_sum">Set same password again to enable protection</string>
    <string name="title_pdprotection">Password protection</string>
    <string name="msg_wrong_password">Wrong password!</string>
    <string name="act_balance_detlist">Detail list</string>
    <string name="act_balance_piechart">Pie chart</string>
    <string name="act_balance_yearly_timechart">Yearly chart</string>
    <string name="act_balance_yearly_cumulative_timechart">Yearly chart(cumulative)</string>
    <string name="label_balance_yearly_timechart">%1$s in %2$s</string>
    <string name="label_balance_yearly_cumulative_timechart">%1$s in %2$s (cumulative)</string>
    <string name="label_detlayout_type3">Money - To</string>
    <string name="label_detlayout_type4">Money - Note</string>
    <string name="act_balance_yearly_runchart">Yearly Asset-Liability run chart</string>
    <string name="label_balance_yearly_runchart">Asset-Liability(cumulative) in %1$s</string>
    <string name="label_prefs_allow_analytics">Send google analytics</string>
    <string name="label_prefs_allow_analytics_sum">[Will not send any other data]Sending usage to help me improve application</string>
    <string name="dtitem_about">About</string>
    <string name="path_about_app">about.html</string>
    <string name="path_what_is_new">whatsnew.html</string>
    <string name="label_weekly_expense">Weekly : %1$s</string>
    <string name="label_monthly_expense">Monthly : %1$s</string>
    <string name="label_cumulative_cash">Cash : %1$s</string>
    <string name="label_cash_account">Cash account</string>
    <string name="label_prefs_csv_encoding">CSV Encoding</string>
    <string name="label_prefs_csv_encoding_sum">Do not change this if you have no idea what this is</string>
    <string name="label_prefcat_csv">CSV</string>
    <string name="label_prefcat_others">Others</string>
    <string name="path_how2use">how2use.html</string>
    <string name="dtitem_how2use">How to use</string>
    <string name="label_what_is_new">What is new</string>
    <string name="label_prefs_startday_month">Start day of month</string>
    <string name="label_prefs_startday_month_sum">Set the start day of month(between 1 - 28)</string>
    <string name="label_default_book_symbol">$</string>
    <string name="label_symbol">Symbol</string>
    <string name="title_book">Book</string>
    <string name="title_bookeditor_create">Create Book</string>
    <string name="title_bookeditor_update">Update Book</string>
    <string name="msg_book_created">Book %1$s was created</string>
    <string name="msg_book_updated">Book %1$s was updated</string>
    <string name="msg_book_deleted">Book %1$s was deleted</string>
    <string name="msg_cannot_delete_default_book">Cannot delete default book</string>
    <string name="msg_cannot_delete_working_book">Cannot delete working book</string>
    <string name="cat_set_working_book">Set working book</string>
    <string name="title_bookmgnt">Book Management</string>
    <string name="label_position_none">No Display</string>
    <string name="label_position_front">Front</string>
    <string name="label_position_after">After</string>
    <string name="label_symbol_position">Symbol Position</string>
    <string name="dtitem_books">Books</string>
    <string name="qmsg_delete_book">Do you want to delete book %1$s and all it\'s data?</string>
    <string name="label_shared_all">Shared-All</string>
    <string name="label_shared_account_only">Shared-Account only</string>
    <string name="label_shared_detail_only">Shared-Detail only</string>
    <string name="act_toggle_hierarchical_report">Toggle Hierarchical</string>
    <string name="label_firstday_sat">Saturday</string>
    <string name="defacc_installments_payable">Installments Payable</string>
    <string name="puitem_year">Y</string>
    <string name="puitem_month">M</string>
    <string name="puitem_day">D</string>
    <string name="label_installments">Installments</string>
    <string name="label_prefs_lastbackup">Last Data Backup Time</string>
</resources>