<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <!--
	<CheckBoxPreference android:key="use_improvider" android:title="@string/label_prefs_improvider"
		android:summary="@string/label_prefs_improvider_sum" android:defaultValue="false" />    -->
    <Preference
        android:defaultValue="Unknown"
        android:key="last_backup"
        android:summary="Unknown"
        android:title="@string/label_prefs_lastbackup" />
    <EditTextPreference
        android:inputType="textPassword"
        android:key="password"
        android:summary="@string/label_prefs_password_sum"
        android:title="@string/label_prefs_password" />
    <EditTextPreference
        android:inputType="textPassword"
        android:key="passwordvd"
        android:summary="@string/label_prefs_passwordvd_sum"
        android:title="@string/label_prefs_passwordvd" />

    <ListPreference
        android:defaultValue="1"
        android:entries="@array/prefs_detlayout_label"
        android:entryValues="@array/prefs_detlayout_val"
        android:key="detail_list_layout"
        android:summary="@string/label_prefs_detlayout_sum"
        android:title="@string/label_prefs_detlayout" />
    <ListPreference
        android:defaultValue="1"
        android:entries="@array/prefs_firstday_week_label"
        android:entryValues="@array/prefs_firstday_week_val"
        android:key="firstday_week"
        android:summary="@string/label_prefs_firstday_week_sum"
        android:title="@string/label_prefs_firstday_week" />

    <EditTextPreference
        android:defaultValue="1"
        android:key="startday_month"
        android:numeric="signed"
        android:summary="@string/label_prefs_startday_month_sum"
        android:title="@string/label_prefs_startday_month" />
    <EditTextPreference
        android:defaultValue="-1"
        android:key="max_records"
        android:numeric="signed"
        android:summary="@string/label_prefs_maxrecords_sum"
        android:title="@string/label_prefs_maxrecords" />

    <PreferenceCategory android:title="@string/label_prefcat_csv" >
        <ListPreference
            android:defaultValue="UTF8"
            android:entries="@array/prefs_csv_encoding_val"
            android:entryValues="@array/prefs_csv_encoding_val"
            android:key="csv_encoding"
            android:summary="@string/label_prefs_csv_encoding_sum"
            android:title="@string/label_prefs_csv_encoding" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="backup_csv"
            android:summary="@string/label_prefs_backupcsv_sum"
            android:title="@string/label_prefs_backupcsv" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/label_prefcat_others" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="allow_analytics"
            android:summary="@string/label_prefs_allow_analytics_sum"
            android:title="@string/label_prefs_allow_analytics" />
        <!-- at the bottom -->
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="open_testsdekstop"
            android:summary="@string/label_prefs_testsdekstop_sum"
            android:title="@string/label_prefs_testsdekstop" />
    </PreferenceCategory>

</PreferenceScreen>
